adicao de mais uma linha a tabela

--- a/tabela3.html
+++ b/tabela3.html
@@ -8,6 +8,9 @@
         <tr><td rowspan="3" valign="top">A</td><td>B</td><td>C</td></tr>
         <tr><td>D</td><td>E</td></tr>
         <tr><td>F</td><td>G</td></tr>
+        <tr>
+            <td colspan="3"> teste</td>
+        </tr>
     </table>
 </body>
 </html>
